--- a/ms.bib
+++ b/ms.bib
@@ -1,408 +1,610 @@
-@article{lecun2015deep,
-	title={Deep learning},
-	author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
-	journal={nature},
-	volume={521},
-	number={7553},
-	pages={436},
-	year={2015},
-	publisher={Nature Publishing Group}
+@article{ai2020correlation,
+	author = {Ai, Tao and Yang, Zhenlu and Hou, Hongyan and Zhan, Chenao and Chen, Chong and Lv, Wenzhi and Tao, Qian and Sun, Ziyong and Xia, Liming},
+	title = {Correlation of Chest {CT} and {RT\}-\{PCR} Testing for Coronavirus Disease 2019 \{(COVID\}-19) in China: {A} Report of 1014 Cases},
+	journal = {Radiology},
+	pages = {E32--E40},
+	year = {2020},
+	publisher = {Radiological Society of North America (RSNA)},
+	doi = {10.1148/radiol.2020200642},
+	number = {2},
+	source = {Crossref},
+	url = {https://doi.org/10.1148/radiol.2020200642},
+	volume = {296},
+	issn = {0033-8419, 1527-1315},
+	month = aug,
 }
 
 @inproceedings{chaurasia2017linknet,
-	title={Linknet: Exploiting encoder representations for efficient semantic segmentation},
-	author={Chaurasia, Abhishek and Culurciello, Eugenio},
-	booktitle={2017 IEEE Visual Communications and Image Processing (VCIP)},
-	pages={1--4},
-	year={2017},
-	organization={IEEE}
-}
-
-@inproceedings{lin2017feature,
-	title={Feature pyramid networks for object detection},
-	author={Lin, Tsung-Yi and Doll{\'a}r, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={2117--2125},
-	year={2017}
-}
-
-@inproceedings{zhao2017pyramid,
-	title={Pyramid scene parsing network},
-	author={Zhao, Hengshuang and Shi, Jianping and Qi, Xiaojuan and Wang, Xiaogang and Jia, Jiaya},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={2881--2890},
-	year={2017}
-}
-
-
-@inproceedings{ronneberger2015u,
-	title={U-net: Convolutional networks for biomedical image segmentation},
-	author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
-	booktitle={International Conference on Medical image computing and computer-assisted intervention},
-	pages={234--241},
-	year={2015},
-	organization={Springer}
-}
-
-@article{kingma2014adam,
-	title={Adam: A method for stochastic optimization},
-	author={Kingma, Diederik P and Ba, Jimmy},
-	journal={arXiv preprint arXiv:1412.6980},
-	year={2014}
-}
-
-@article{world2020coronavirus,
-	title={Coronavirus disease 2019 (COVID-19): situation report, 72},
-	author={World Health Organization and others},
-	year={2020},
-	publisher={World Health Organization}
-}
-
-@article{hofmanninger2020automatic,
-	title={Automatic lung segmentation in routine imaging is a data diversity problem, not a methodology problem},
-	author={Hofmanninger, Johannes and Prayer, Florian and Pan, Jeanny and Rohrich, Sebastian and Prosch, Helmut and Langs, Georg},
-	journal={arXiv preprint arXiv:2001.11767},
-	year={2020}
-}
-
-@article{yakubovskiy2019segmentation,
-	title={Segmentation models},
-	author={Yakubovskiy, P},
-	journal={GitHub repository},
-	year={2019}
-}
-
-@inproceedings{paszke2019pytorch,
-	title={PyTorch: An imperative style, high-performance deep learning library},
-	author={Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
-	booktitle={Advances in Neural Information Processing Systems},
-	pages={8024--8035},
-	year={2019}
-}
-
-@article{minaee2020image,
-	title={Image Segmentation Using Deep Learning: A Survey},
-	author={Minaee, Shervin and Boykov, Yuri and Porikli, Fatih and Plaza, Antonio and Kehtarnavaz, Nasser and Terzopoulos, Demetri},
-	journal={arXiv preprint arXiv:2001.05566},
-	year={2020}
-}
-
-@incollection{drozdzal2016importance,
-	title={The importance of skip connections in biomedical image segmentation},
-	author={Drozdzal, Michal and Vorontsov, Eugene and Chartrand, Gabriel and Kadoury, Samuel and Pal, Chris},
-	booktitle={Deep Learning and Data Labeling for Medical Applications},
-	pages={179--187},
-	year={2016},
-	publisher={Springer}
-}
-
-@inproceedings{he2016deep,
-	title={Deep residual learning for image recognition},
-	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={770--778},
-	year={2016}
-}
-
-@inproceedings{hu2019comparison,
-	title={A Comparison and Strategy of Semantic Segmentation on Remote Sensing Images},
-	author={Hu, Junxing and Li, Ling and Lin, Yijun and Wu, Fengge and Zhao, Junsuo},
-	booktitle={The International Conference on Natural Computation, Fuzzy Systems and Knowledge Discovery},
-	pages={21--29},
-	year={2019},
-	organization={Springer}
-}
-
-@article{simonyan2014very,
-	title={Very deep convolutional networks for large-scale image recognition},
-	author={Simonyan, Karen and Zisserman, Andrew},
-	journal={arXiv preprint arXiv:1409.1556},
-	year={2014}
+	author = {Chaurasia, Abhishek and Culurciello, Eugenio},
+	title = {{LinkNet:} {Exploiting} encoder representations for efficient semantic segmentation},
+	booktitle = {2017 IEEE Visual Communications and Image Processing (VCIP)},
+	pages = {1--4},
+	year = {2017},
+	organization = {IEEE},
+	doi = {10.1109/vcip.2017.8305148},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/vcip.2017.8305148},
+	publisher = {IEEE},
+	month = dec,
 }
 
 @inproceedings{chen2017dual,
-	title={Dual path networks},
-	author={Chen, Yunpeng and Li, Jianan and Xiao, Huaxin and Jin, Xiaojie and Yan, Shuicheng and Feng, Jiashi},
-	booktitle={Advances in neural information processing systems},
-	pages={4467--4475},
-	year={2017}
-}
-
-@article{tan2019efficientnet,
-	title={Efficientnet: Rethinking model scaling for convolutional neural networks},
-	author={Tan, Mingxing and Le, Quoc V},
-	journal={arXiv preprint arXiv:1905.11946},
-	year={2019}
-}
-
-@article{howard2017mobilenets,
-	title={Mobilenets: Efficient convolutional neural networks for mobile vision applications},
-	author={Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
-	journal={arXiv preprint arXiv:1704.04861},
-	year={2017}
-}
-
-@inproceedings{chollet2017xception,
-	title={Xception: Deep learning with depthwise separable convolutions},
-	author={Chollet, Fran{\c{c}}ois},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={1251--1258},
-	year={2017}
-}
-
-@article{jin2020ai,
-	title={AI-assisted CT imaging analysis for COVID-19 screening: Building and deploying a medical AI system in four weeks},
-	author={Jin, Shuo and Wang, Bo and Xu, Haibo and Luo, Chuan and Wei, Lai and Zhao, Wei and Hou, Xuexue and Ma, Wenshuo and Xu, Zhengqing and Zheng, Zhuozhao and others},
-	journal={medRxiv},
-	year={2020},
-	publisher={Cold Spring Harbor Laboratory Press}
-}
-
-@article{shi2020review,
-	title={Review of artificial intelligence techniques in imaging data acquisition, segmentation and diagnosis for covid-19},
-	author={Shi, Feng and Wang, Jun and Shi, Jun and Wu, Ziyan and Wang, Qian and Tang, Zhenyu and He, Kelei and Shi, Yinghuan and Shen, Dinggang},
-	journal={IEEE reviews in biomedical engineering},
-	year={2020},
-	publisher={IEEE}
-}
-
-@article{skourt2018lung,
-	title={Lung CT image segmentation using deep neural networks},
-	author={Skourt, Brahim Ait and El Hassani, Abdelhamid and Majda, Aicha},
-	journal={Procedia Computer Science},
-	volume={127},
-	pages={109--113},
-	year={2018},
-	publisher={Elsevier}
-}
-
-@inproceedings{harrison2017progressive,
-	title={Progressive and multi-path holistically nested neural networks for pathological lung segmentation from CT images},
-	author={Harrison, Adam P and Xu, Ziyue and George, Kevin and Lu, Le and Summers, Ronald M and Mollura, Daniel J},
-	booktitle={International conference on medical image computing and computer-assisted intervention},
-	pages={621--629},
-	year={2017},
-	organization={Springer}
-}
-
-@article{shan2020lung,
-	title={Lung infection quantification of covid-19 in ct images with deep learning},
-	author={Shan, Fei and Gao, Yaozong and Wang, Jun and Shi, Weiya and Shi, Nannan and Han, Miaofei and Xue, Zhong and Shi, Yuxin},
-	journal={arXiv preprint arXiv:2003.04655},
-	year={2020}
-}
-
-@article{fan2020inf,
-	title={Inf-Net: Automatic COVID-19 Lung Infection Segmentation from CT Images},
-	author={Fan, Deng-Ping and Zhou, Tao and Ji, Ge-Peng and Zhou, Yi and Chen, Geng and Fu, Huazhu and Shen, Jianbing and Shao, Ling},
-	journal={IEEE Transactions on Medical Imaging},
-	year={2020},
-	publisher={IEEE}
+	author = {Chen, Yunpeng and Li, Jianan and Xiao, Huaxin and Jin, Xiaojie and Yan, Shuicheng and Feng, Jiashi},
+	title = {Dual path networks},
+	booktitle = {Advances in neural information processing systems},
+	pages = {4467--4475},
+	year = {2017},
 }
 
 @article{chen2020residual,
-	title={Residual Attention U-Net for Automated Multi-Class Segmentation of COVID-19 Chest CT Images},
-	author={Chen, Xiaocong and Yao, Lina and Zhang, Yu},
-	journal={arXiv preprint arXiv:2004.05645},
-	year={2020}
+	author = {Chen, Xiaocong and Yao, Lina and Zhang, Yu},
+	title = {Residual Attention U-Net for Automated Multi-Class Segmentation of \{COVID\}-19 Chest {CT} Images},
+	journal = {arXiv preprint arXiv:2004.05645},
+	year = {2020},
 }
 
-@article{yan2020covid,
-	title={COVID-19 Chest CT Image Segmentation--A Deep Convolutional Neural Network Solution},
-	author={Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
-	journal={arXiv preprint arXiv:2004.10987},
-	year={2020}
-}
-
-@article{wang2020clinical,
-	title={Clinical characteristics of 138 hospitalized patients with 2019 novel coronavirus--infected pneumonia in Wuhan, China},
-	author={Wang, Dawei and Hu, Bo and Hu, Chang and Zhu, Fangfang and Liu, Xing and Zhang, Jing and Wang, Binbin and Xiang, Hui and Cheng, Zhenshun and Xiong, Yong and others},
-	journal={Jama},
-	volume={323},
-	number={11},
-	pages={1061--1069},
-	year={2020},
-	publisher={American Medical Association}
-}
-
-@article{ma2020towards,
-	title={Towards Efficient COVID-19 CT Annotation: A Benchmark for Lung and Infection Segmentation},
-	author={Ma, Jun and Wang, Yixin and An, Xingle and Ge, Cheng and Yu, Ziqi and Chen, Jianan and Zhu, Qiongjie and Dong, Guoqiang and He, Jian and He, Zhiqiang and others},
-	journal={arXiv preprint arXiv:2004.12537},
-	year={2020}
-}
-
-@article{ng2020imaging,
-	title={Imaging profile of the COVID-19 infection: radiologic findings and literature review},
-	author={Ng, Ming-Yen and Lee, Elaine YP and Yang, Jin and Yang, Fangfang and Li, Xia and Wang, Hongxia and Lui, Macy Mei-sze and Lo, Christine Shing-Yen and Leung, Barry and Khong, Pek-Lan and others},
-	journal={Radiology: Cardiothoracic Imaging},
-	volume={2},
-	number={1},
-	pages={e200034},
-	year={2020},
-	publisher={Radiological Society of North America}
-}
-
-@article{hu2001automatic,
-	title={Automatic lung segmentation for accurate quantitation of volumetric X-ray CT images},
-	author={Hu, Shiying and Hoffman, Eric A and Reinhardt, Joseph M},
-	journal={IEEE transactions on medical imaging},
-	volume={20},
-	number={6},
-	pages={490--498},
-	year={2001},
-	publisher={IEEE}
-}
-
-@article{keshani2013lung,
-	title={Lung nodule segmentation and recognition using SVM classifier and active contour modeling: A complete intelligent system},
-	author={Keshani, Mohsen and Azimifar, Zohreh and Tajeripour, Farshad and Boostani, Reza},
-	journal={Computers in biology and medicine},
-	volume={43},
-	number={4},
-	pages={287--300},
-	year={2013},
-	publisher={Elsevier}
-}
-
-@article{manikandan2016lung,
-	title={Lung cancer detection using fuzzy auto-seed cluster means morphological segmentation and SVM classifier},
-	author={Manikandan, T and Bharathi, N},
-	journal={Journal of medical systems},
-	volume={40},
-	number={7},
-	pages={181},
-	year={2016},
-	publisher={Springer}
-}
-
-@inproceedings{szegedy2015going,
-	title={Going deeper with convolutions},
-	author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={1--9},
-	year={2015}
-}
-
-@inproceedings{szegedy2017inception,
-	title={Inception-v4, inception-resnet and the impact of residual connections on learning},
-	author={Szegedy, Christian and Ioffe, Sergey and Vanhoucke, Vincent and Alemi, Alexander A},
-	booktitle={Thirty-first AAAI conference on artificial intelligence},
-	year={2017}
+@inproceedings{chollet2017xception,
+	author = {Chollet, Francois},
+	title = {Xception: {Deep} Learning with Depthwise Separable Convolutions},
+	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {1251--1258},
+	year = {2017},
+	doi = {10.1109/cvpr.2017.195},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2017.195},
+	publisher = {IEEE},
+	month = jul,
 }
 
 @inproceedings{deng2009imagenet,
-	title={Imagenet: A large-scale hierarchical image database},
-	author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
-	booktitle={2009 IEEE conference on computer vision and pattern recognition},
-	pages={248--255},
-	year={2009},
-	organization={Ieee}
+	author = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+	title = {{ImageNet:} {A} large-scale hierarchical image database},
+	booktitle = {2009 IEEE Conference on Computer Vision and Pattern Recognition},
+	pages = {248--255},
+	year = {2009},
+	organization = {Ieee},
+	doi = {10.1109/cvpr.2009.5206848},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2009.5206848},
+	publisher = {IEEE},
+	month = jun,
 }
 
-@inproceedings{xie2017aggregated,
-	title={Aggregated residual transformations for deep neural networks},
-	author={Xie, Saining and Girshick, Ross and Doll{\'a}r, Piotr and Tu, Zhuowen and He, Kaiming},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={1492--1500},
-	year={2017}
+@incollection{drozdzal2016importance,
+	author = {Drozdzal, Michal and Vorontsov, Eugene and Chartrand, Gabriel and Kadoury, Samuel and Pal, Chris},
+	title = {The Importance of Skip Connections in Biomedical Image Segmentation},
+	booktitle = {Deep Learning and Data Labeling for Medical Applications},
+	pages = {179--187},
+	year = {2016},
+	publisher = {Springer International Publishing},
+	doi = {10.1007/978-3-319-46976-8_19},
+	source = {Crossref},
+	url = {https://doi.org/10.1007/978-3-319-46976-8_19},
+	issn = {0302-9743, 1611-3349},
+	isbn = {9783319469751, 9783319469768},
 }
 
-@article{wang2020noise,
-	title={A Noise-robust Framework for Automatic Segmentation of COVID-19 Pneumonia Lesions from CT Images},
-	author={Wang, Guotai and Liu, Xinglong and Li, Chaoping and Xu, Zhiyong and Ruan, Jiugen and Zhu, Haifeng and Meng, Tao and Li, Kang and Huang, Ning and Zhang, Shaoting},
-	journal={IEEE Transactions on Medical Imaging},
-	year={2020},
-	publisher={IEEE}
+@article{fan2020inf,
+	author = {Fan, Deng-Ping and Zhou, Tao and Ji, Ge-Peng and Zhou, Yi and Chen, Geng and Fu, Huazhu and Shen, Jianbing and Shao, Ling},
+	title = {Inf-Net: {Automatic} \{COVID\}-19 Lung Infection Segmentation From {CT} Images},
+	journal = {IEEE Trans. Med. Imaging},
+	year = {2020},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	doi = {10.1109/tmi.2020.2996645},
+	number = {8},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/tmi.2020.2996645},
+	volume = {39},
+	issn = {0278-0062, 1558-254X},
+	pages = {2626--2637},
+	month = aug,
+}
+
+@inproceedings{harrison2017progressive,
+	author = {Harrison, Adam P and Xu, Ziyue and George, Kevin and Lu, Le and Summers, Ronald M and Mollura, Daniel J},
+	title = {Progressive and multi-path holistically nested neural networks for pathological lung segmentation from {CT} images},
+	booktitle = {International conference on medical image computing and computer-assisted intervention},
+	pages = {621--629},
+	year = {2017},
+	organization = {Springer},
+}
+
+@inproceedings{he2016deep,
+	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	title = {Deep Residual Learning for Image Recognition},
+	booktitle = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {770--778},
+	year = {2016},
+	doi = {10.1109/cvpr.2016.90},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2016.90},
+	publisher = {IEEE},
+	month = jun,
 }
 
 @article{he2020benchmarking,
-	title={Benchmarking Deep Learning Models and Automated Model Design for COVID-19 Detection with Chest CT Scans},
-	author={He, Xin and Wang, Shihao and Shi, Shaohuai and Chu, Xiaowen and Tang, Jiangping and Liu, Xin and Yan, Chenggang and Zhang, Jiyong and Ding, Guiguang},
-	journal={medRxiv},
-	year={2020},
-	publisher={Cold Spring Harbor Laboratory Press}
-}
-
-@article{ai2020correlation,
-	title={Correlation of chest CT and RT-PCR testing in coronavirus disease 2019 (COVID-19) in China: a report of 1014 cases},
-	author={Ai, Tao and Yang, Zhenlu and Hou, Hongyan and Zhan, Chenao and Chen, Chong and Lv, Wenzhi and Tao, Qian and Sun, Ziyong and Xia, Liming},
-	journal={Radiology},
-	pages={200642},
-	year={2020},
-	publisher={Radiological Society of North America}
-}
-
-@article{kalpathy2016comparison,
-	title={A comparison of lung nodule segmentation algorithms: methods and results from a multi-institutional study},
-	author={Kalpathy-Cramer, Jayashree and Zhao, Binsheng and Goldgof, Dmitry and Gu, Yuhua and Wang, Xingwei and Yang, Hao and Tan, Yongqiang and Gillies, Robert and Napel, Sandy},
-	journal={Journal of digital imaging},
-	volume={29},
-	number={4},
-	pages={476--487},
-	year={2016},
-	publisher={Springer}
-}
-
-@inproceedings{king2018comparison,
-	title={A comparison of deep learning methods for semantic segmentation of coral reef survey images},
-	author={King, Andrew and Bhandarkar, Suchendra M and Hopkinson, Brian M},
-	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
-	pages={1394--1402},
-	year={2018}
-}
-
-@inproceedings{liu2018comparison,
-	title={A comparison of deep learning architectures for semantic mapping of very high resolution images},
-	author={Liu, Qinghui and Salberg, Arnt-B{\o}rre and Jenssen, Robert},
-	booktitle={IGARSS 2018-2018 IEEE International Geoscience and Remote Sensing Symposium},
-	pages={6943--6946},
-	year={2018},
-	organization={IEEE}
-}
-
-@inproceedings{orsic2019defense,
-	title={In defense of pre-trained imagenet architectures for real-time semantic segmentation of road-driving images},
-	author={Orsic, Marin and Kreso, Ivan and Bevandic, Petra and Segvic, Sinisa},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={12607--12616},
-	year={2019}
+	author = {He, Xin and Wang, Shihao and Chu, Xiaowen and Shi, Shaohuai and Tang, Jiangping and Liu, Xin and Yan, Chenggang and Zhang, Jiyong and Ding, Guiguang},
+	title = {Automated Model Design and Benchmarking of Deep Learning Models for \{COVID\}-19 Detection with Chest {CT} Scans},
+	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+	year = {2021},
+	publisher = {Association for the Advancement of Artificial Intelligence (AAAI)},
+	doi = {10.1609/aaai.v35i6.16614},
+	number = {6},
+	source = {Crossref},
+	url = {https://doi.org/10.1609/aaai.v35i6.16614},
+	volume = {35},
+	issn = {2374-3468, 2159-5399},
+	pages = {4821--4829},
+	month = may,
 }
 
 @article{hesamian2019deep,
-	title={Deep learning techniques for medical image segmentation: Achievements and challenges},
-	author={Hesamian, Mohammad Hesam and Jia, Wenjing and He, Xiangjian and Kennedy, Paul},
-	journal={Journal of digital imaging},
-	volume={32},
-	number={4},
-	pages={582--596},
-	year={2019},
-	publisher={Springer}
+	author = {Hesamian, Mohammad Hesam and Jia, Wenjing and He, Xiangjian and Kennedy, Paul},
+	title = {Deep Learning Techniques for Medical Image Segmentation: {Achievements} and Challenges},
+	journal = {J. Digit. Imaging},
+	volume = {32},
+	number = {4},
+	pages = {582--596},
+	year = {2019},
+	publisher = {Springer Science and Business Media LLC},
+	doi = {10.1007/s10278-019-00227-x},
+	source = {Crossref},
+	url = {https://doi.org/10.1007/s10278-019-00227-x},
+	issn = {0897-1889, 1618-727X},
+	month = may,
 }
 
-@article{wang2020does,
-	title={Does Non-COVID19 Lung Lesion Help? Investigating Transferability in COVID-19 CT Image Segmentation},
-	author={Wang, Yixin and Zhang, Yao and Liu, Yang and Tian, Jiang and Zhong, Cheng and Shi, Zhongchao and Zhang, Yang and He, Zhiqiang},
-	journal={arXiv preprint arXiv:2006.13877},
-	year={2020}
+@article{hofmanninger2020automatic,
+	author = {Hofmanninger, Johannes and Prayer, Florian and Pan, Jeanny and Rohrich, Sebastian and Prosch, Helmut and Langs, Georg},
+	title = {Automatic lung segmentation in routine imaging is a data diversity problem, not a methodology problem},
+	journal = {arXiv preprint arXiv:2001.11767},
+	year = {2020},
+}
+
+@article{howard2017mobilenets,
+	author = {Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+	title = {Mobilenets: {Efficient} convolutional neural networks for mobile vision applications},
+	journal = {arXiv preprint arXiv:1704.04861},
+	year = {2017},
+}
+
+@article{hu2001automatic,
+	author = {Hu, S. and Hoffman, E.A. and Reinhardt, J.M.},
+	title = {Automatic lung segmentation for accurate quantitation of volumetric X-ray {CT} images},
+	journal = {IEEE Trans. Med. Imaging},
+	volume = {20},
+	number = {6},
+	pages = {490--498},
+	year = {2001},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	doi = {10.1109/42.929615},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/42.929615},
+	issn = {0278-0062},
+	month = jun,
+}
+
+@inproceedings{hu2019comparison,
+	author = {Hu, Junxing and Li, Ling and Lin, Yijun and Wu, Fengge and Zhao, Junsuo},
+	title = {A Comparison and Strategy of Semantic Segmentation on Remote Sensing Images},
+	booktitle = {The International Conference on Natural Computation, Fuzzy Systems and Knowledge Discovery},
+	pages = {21--29},
+	year = {2019},
+	organization = {Springer},
 }
 
 @inproceedings{huang2017densely,
-	title={Densely connected convolutional networks},
-	author={Huang, Gao and Liu, Zhuang and Van Der Maaten, Laurens and Weinberger, Kilian Q},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-	pages={4700--4708},
-	year={2017}
+	author = {Huang, Gao and Liu, Zhuang and Van Der Maaten, Laurens and Weinberger, Kilian Q.},
+	title = {Densely Connected Convolutional Networks},
+	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {4700--4708},
+	year = {2017},
+	doi = {10.1109/cvpr.2017.243},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2017.243},
+	publisher = {IEEE},
+	month = jul,
+}
+
+@article{jin2020ai,
+	author = {Wang, Bo and Jin, Shuo and Yan, Qingsen and Xu, Haibo and Luo, Chuan and Wei, Lai and Zhao, Wei and Hou, Xuexue and Ma, Wenshuo and Xu, Zhengqing and Zheng, Zhuozhao and Sun, Wenbo and Lan, Lan and Zhang, Wei and Mu, Xiangdong and Shi, Chenxi and Wang, Zhongxiao and Lee, Jihae and Jin, Zijian and Lin, Minggui and Jin, Hongbo and Zhang, Liang and Guo, Jun and Zhao, Benqi and Ren, Zhizhong and Wang, Shuhao and Xu, Wei and Wang, Xinghuan and Wang, Jianming and You, Zheng and Dong, Jiahong},
+	title = {\{AI\}-assisted {CT} imaging analysis for \{COVID\}-19 screening: {Building} and deploying a medical {AI} system},
+	journal = {Appl. Soft Comput.},
+	year = {2021},
+	publisher = {Elsevier BV},
+	doi = {10.1016/j.asoc.2020.106897},
+	source = {Crossref},
+	url = {https://doi.org/10.1016/j.asoc.2020.106897},
+	volume = {98},
+	issn = {1568-4946},
+	pages = {106897},
+	month = jan,
+}
+
+@article{kalpathy2016comparison,
+	author = {Kalpathy-Cramer, Jayashree and Zhao, Binsheng and Goldgof, Dmitry and Gu, Yuhua and Wang, Xingwei and Yang, Hao and Tan, Yongqiang and Gillies, Robert and Napel, Sandy},
+	title = {A Comparison of Lung Nodule Segmentation Algorithms: {Methods} and Results from a Multi-institutional Study},
+	journal = {J. Digit. Imaging},
+	volume = {29},
+	number = {4},
+	pages = {476--487},
+	year = {2016},
+	publisher = {Springer Science and Business Media LLC},
+	doi = {10.1007/s10278-016-9859-z},
+	source = {Crossref},
+	url = {https://doi.org/10.1007/s10278-016-9859-z},
+	issn = {0897-1889, 1618-727X},
+	month = feb,
+}
+
+@article{keshani2013lung,
+	author = {Keshani, Mohsen and Azimifar, Zohreh and Tajeripour, Farshad and Boostani, Reza},
+	title = {Lung nodule segmentation and recognition using {SVM} classifier and active contour modeling: {A} complete intelligent system},
+	journal = {Comput. Biol. Med.},
+	volume = {43},
+	number = {4},
+	pages = {287--300},
+	year = {2013},
+	publisher = {Elsevier BV},
+	doi = {10.1016/j.compbiomed.2012.12.004},
+	source = {Crossref},
+	url = {https://doi.org/10.1016/j.compbiomed.2012.12.004},
+	issn = {0010-4825},
+	month = may,
+}
+
+@inproceedings{king2018comparison,
+	author = {King, Andrew and Bhandarkar, Suchendra M. and Hopkinson, Brian M.},
+	title = {A Comparison of Deep Learning Methods for Semantic Segmentation of Coral Reef Survey Images},
+	booktitle = {2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
+	pages = {1394--1402},
+	year = {2018},
+	doi = {10.1109/cvprw.2018.00188},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvprw.2018.00188},
+	publisher = {IEEE},
+	month = jun,
+}
+
+@article{kingma2014adam,
+	author = {Kingma, Diederik P and Ba, Jimmy},
+	title = {Adam: {A} method for stochastic optimization},
+	journal = {arXiv preprint arXiv:1412.6980},
+	year = {2014},
+}
+
+@article{lecun2015deep,
+	author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+	title = {Deep learning},
+	journal = {Nature},
+	volume = {521},
+	number = {7553},
+	pages = {436--444},
+	year = {2015},
+	publisher = {Springer Science and Business Media LLC},
+	doi = {10.1038/nature14539},
+	source = {Crossref},
+	url = {https://doi.org/10.1038/nature14539},
+	issn = {0028-0836, 1476-4687},
+	month = may,
+}
+
+@inproceedings{lin2017feature,
+	author = {Lin, Tsung-Yi and Dollar, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
+	title = {Feature Pyramid Networks for Object Detection},
+	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {2117--2125},
+	year = {2017},
+	doi = {10.1109/cvpr.2017.106},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2017.106},
+	publisher = {IEEE},
+	month = jul,
+}
+
+@inproceedings{liu2018comparison,
+	author = {Liu, Qinghui and Salberg, Arnt-Borre and Jenssen, Robert},
+	title = {A Comparison of Deep Learning Architectures for Semantic Mapping of Very High Resolution Images},
+	booktitle = {IGARSS 2018 - 2018 IEEE International Geoscience and Remote Sensing Symposium},
+	pages = {6943--6946},
+	year = {2018},
+	organization = {IEEE},
+	doi = {10.1109/igarss.2018.8518533},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/igarss.2018.8518533},
+	publisher = {IEEE},
+	month = jul,
+}
+
+@article{ma2020towards,
+	author = {Ma, Jun and Wang, Yixin and An, Xingle and Ge, Cheng and Yu, Ziqi and Chen, Jianan and Zhu, Qiongjie and Dong, Guoqiang and He, Jian and He, Zhiqiang and Cao, Tianjia and Zhu, Yuntao and Nie, Ziwei and Yang, Xiaoping},
+	title = {Toward data-efficient learning: {A} benchmark for {COVID-19} {CT} lung and infection segmentation},
+	journal = {Med. Phys.},
+	year = {2021},
+	doi = {10.1002/mp.14676},
+	number = {3},
+	source = {Crossref},
+	url = {https://doi.org/10.1002/mp.14676},
+	volume = {48},
+	publisher = {Wiley},
+	issn = {0094-2405, 2473-4209},
+	pages = {1197--1210},
+	month = feb,
+}
+
+@article{manikandan2016lung,
+	author = {Manikandan, T. and Bharathi, N.},
+	title = {Lung Cancer Detection Using Fuzzy Auto-Seed Cluster Means Morphological Segmentation and {SVM} Classifier},
+	journal = {J. Med. Syst.},
+	volume = {40},
+	number = {7},
+	pages = {181},
+	year = {2016},
+	publisher = {Springer Science and Business Media LLC},
+	doi = {10.1007/s10916-016-0539-9},
+	source = {Crossref},
+	url = {https://doi.org/10.1007/s10916-016-0539-9},
+	issn = {0148-5598, 1573-689X},
+	month = jun,
+}
+
+@article{minaee2020image,
+	author = {Minaee, Shervin and Boykov, Yuri Y. and Porikli, Fatih and Plaza, Antonio J and Kehtarnavaz, Nasser and Terzopoulos, Demetri},
+	title = {Image Segmentation Using Deep Learning: {A} Survey},
+	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+	year = {2021},
+	doi = {10.1109/tpami.2021.3059968},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/tpami.2021.3059968},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	issn = {0162-8828, 2160-9292, 1939-3539},
+	pages = {1--1},
+}
+
+@article{ng2020imaging,
+	author = {Ng, Ming-Yen and Lee, Elaine Y. P. and Yang, Jin and Yang, Fangfang and Li, Xia and Wang, Hongxia and Lui, Macy Mei-sze and Lo, Christine Shing-Yen and Leung, Barry and Khong, Pek-Lan and Hui, Christopher Kim-Ming and Yuen, Kwok-yung and Kuo, Michael D.},
+	title = {Imaging Profile of the \{COVID\}-19 Infection: {Radiologic} Findings and Literature Review},
+	journal = {Radiology: Cardiothoracic Imaging},
+	volume = {2},
+	number = {1},
+	pages = {e200034},
+	year = {2020},
+	publisher = {Radiological Society of North America (RSNA)},
+	doi = {10.1148/ryct.2020200034},
+	source = {Crossref},
+	url = {https://doi.org/10.1148/ryct.2020200034},
+	issn = {2638-6135},
+	month = feb,
+}
+
+@inproceedings{orsic2019defense,
+	author = {Orsic, Marin and Kreso, Ivan and Bevandic, Petra and Segvic, Sinisa},
+	title = {In Defense of Pre-Trained {ImageNet} Architectures for Real-Time Semantic Segmentation of Road-Driving Images},
+	booktitle = {2019 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {12607--12616},
+	year = {2019},
+	doi = {10.1109/cvpr.2019.01289},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2019.01289},
+	publisher = {IEEE},
+	month = jun,
+}
+
+@inproceedings{paszke2019pytorch,
+	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
+	title = {{PyTorch:} {An} imperative style, high-performance deep learning library},
+	booktitle = {Advances in Neural Information Processing Systems},
+	pages = {8024--8035},
+	year = {2019},
+}
+
+@inproceedings{ronneberger2015u,
+	author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	title = {U-net: {Convolutional} networks for biomedical image segmentation},
+	booktitle = {International Conference on Medical image computing and computer-assisted intervention},
+	pages = {234--241},
+	year = {2015},
+	organization = {Springer},
 }
 
 @article{schneider1996calibration,
-	title={The calibration of CT Hounsfield units for radiotherapy treatment planning},
-	author={Schneider, Uwe and Pedroni, Eros and Lomax, Antony},
-	journal={Physics in Medicine \& Biology},
-	volume={41},
-	number={1},
-	pages={111},
-	year={1996},
-	publisher={IOP Publishing}
+	author = {Schneider, Uwe and Pedroni, Eros and Lomax, Antony},
+	title = {The calibration of {CT} Hounsfield units for radiotherapy treatment planning},
+	journal = {Phys. Med. Biol.},
+	volume = {41},
+	number = {1},
+	pages = {111--124},
+	year = {1996},
+	publisher = {IOP Publishing},
+	doi = {10.1088/0031-9155/41/1/009},
+	source = {Crossref},
+	url = {https://doi.org/10.1088/0031-9155/41/1/009},
+	issn = {0031-9155, 1361-6560},
+	month = jan,
 }
 
+@article{shan2020lung,
+	author = {Shan, Fei and Gao, Yaozong and Wang, Jun and Shi, Weiya and Shi, Nannan and Han, Miaofei and Xue, Zhong and Shen, Dinggang and Shi, Yuxin},
+	title = {Abnormal lung quantification in chest {CT} images of {COVID-19} patients with deep learning and its application to severity prediction},
+	journal = {Med. Phys.},
+	year = {2021},
+	doi = {10.1002/mp.14609},
+	number = {4},
+	source = {Crossref},
+	url = {https://doi.org/10.1002/mp.14609},
+	volume = {48},
+	publisher = {Wiley},
+	issn = {0094-2405, 2473-4209},
+	pages = {1633--1645},
+	month = mar,
+}
+
+@article{shi2020review,
+	author = {Shi, Feng and Wang, Jun and Shi, Jun and Wu, Ziyan and Wang, Qian and Tang, Zhenyu and He, Kelei and Shi, Yinghuan and Shen, Dinggang},
+	title = {Review of Artificial Intelligence Techniques in Imaging Data Acquisition, Segmentation, and Diagnosis for \{COVID\}-19},
+	journal = {IEEE Rev. Biomed. Eng.},
+	year = {2021},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	doi = {10.1109/rbme.2020.2987975},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/rbme.2020.2987975},
+	volume = {14},
+	issn = {1937-3333, 1941-1189},
+	pages = {4--15},
+}
+
+@article{simonyan2014very,
+	author = {Simonyan, Karen and Zisserman, Andrew},
+	title = {Very deep convolutional networks for large-scale image recognition},
+	journal = {arXiv preprint arXiv:1409.1556},
+	year = {2014},
+}
+
+@article{skourt2018lung,
+	author = {Ait Skourt, Brahim and El Hassani, Abdelhamid and Majda, Aicha},
+	title = {Lung {CT} Image Segmentation Using Deep Neural Networks},
+	journal = {Procedia Comput. Sci.},
+	volume = {127},
+	pages = {109--113},
+	year = {2018},
+	publisher = {Elsevier BV},
+	doi = {10.1016/j.procs.2018.01.104},
+	source = {Crossref},
+	url = {https://doi.org/10.1016/j.procs.2018.01.104},
+	issn = {1877-0509},
+}
+
+@inproceedings{szegedy2015going,
+	author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	title = {Going deeper with convolutions},
+	booktitle = {2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {1--9},
+	year = {2015},
+	doi = {10.1109/cvpr.2015.7298594},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2015.7298594},
+	publisher = {IEEE},
+	month = jun,
+}
+
+@inproceedings{szegedy2017inception,
+	author = {Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+	title = {Rethinking the Inception Architecture for Computer Vision},
+	booktitle = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	year = {2016},
+	doi = {10.1109/cvpr.2016.308},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2016.308},
+	publisher = {IEEE},
+	month = jun,
+}
+
+@article{tan2019efficientnet,
+	author = {Tan, Mingxing and Le, Quoc V},
+	title = {Efficientnet: {Rethinking} model scaling for convolutional neural networks},
+	journal = {arXiv preprint arXiv:1905.11946},
+	year = {2019},
+}
+
+@article{wang2020clinical,
+	author = {Wang, Dawei and Hu, Bo and Hu, Chang and Zhu, Fangfang and Liu, Xing and Zhang, Jing and Wang, Binbin and Xiang, Hui and Cheng, Zhenshun and Xiong, Yong and Zhao, Yan and Li, Yirong and Wang, Xinghuan and Peng, Zhiyong},
+	title = {Clinical Characteristics of 138 Hospitalized Patients With 2019 Novel {Coronavirus{\textendash}Infected} Pneumonia in Wuhan, China},
+	journal = {JAMA},
+	volume = {323},
+	number = {11},
+	pages = {1061},
+	year = {2020},
+	publisher = {American Medical Association (AMA)},
+	doi = {10.1001/jama.2020.1585},
+	source = {Crossref},
+	url = {https://doi.org/10.1001/jama.2020.1585},
+	issn = {0098-7484},
+	month = mar,
+}
+
+@article{wang2020does,
+	author = {Wang, Yixin and Zhang, Yao and Liu, Yang and Tian, Jiang and Zhong, Cheng and Shi, Zhongchao and Zhang, Yang and He, Zhiqiang},
+	title = {Does non-\{COVID\}-19 lung lesion help? investigating transferability in \{COVID\}-19 {CT} image segmentation},
+	journal = {Comput. Meth. Prog. Bio.},
+	year = {2021},
+	doi = {10.1016/j.cmpb.2021.106004},
+	source = {Crossref},
+	url = {https://doi.org/10.1016/j.cmpb.2021.106004},
+	volume = {202},
+	publisher = {Elsevier BV},
+	issn = {0169-2607},
+	pages = {106004},
+	month = apr,
+}
+
+@article{wang2020noise,
+	author = {Wang, Guotai and Liu, Xinglong and Li, Chaoping and Xu, Zhiyong and Ruan, Jiugen and Zhu, Haifeng and Meng, Tao and Li, Kang and Huang, Ning and Zhang, Shaoting},
+	title = {A Noise-Robust Framework for Automatic Segmentation of \{COVID\}-19 Pneumonia Lesions From {CT} Images},
+	journal = {IEEE Trans. Med. Imaging},
+	year = {2020},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	doi = {10.1109/tmi.2020.3000314},
+	number = {8},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/tmi.2020.3000314},
+	volume = {39},
+	issn = {0278-0062, 1558-254X},
+	pages = {2653--2663},
+	month = aug,
+}
+
+@article{world2020coronavirus,
+	author = {Organization, World Health and others},
+	title = {Coronavirus disease 2019 \{(COVID\}-19): {Situation} report, 72},
+	year = {2020},
+	publisher = {World Health Organization},
+}
+
+@inproceedings{xie2017aggregated,
+	author = {Xie, Saining and Girshick, Ross and Dollar, Piotr and Tu, Zhuowen and He, Kaiming},
+	title = {Aggregated Residual Transformations for Deep Neural Networks},
+	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {1492--1500},
+	year = {2017},
+	doi = {10.1109/cvpr.2017.634},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2017.634},
+	publisher = {IEEE},
+	month = jul,
+}
+
+@article{yakubovskiy2019segmentation,
+	author = {Yakubovskiy, P},
+	title = {Segmentation models},
+	journal = {GitHub repository},
+	year = {2019},
+}
+
+@article{yan2020covid,
+	author = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Ai, Jingyang and Shi, Qinfeng and Zhang, Yanning and Jin, Shuo and Zhang, Liang and You, Zheng},
+	title = {\{COVID\}-19 Chest {CT} Image Segmentation Network by Multi-Scale Fusion and Enhancement Operations},
+	journal = {\#IEEE\_J\_BD\#},
+	year = {2021},
+	doi = {10.1109/tbdata.2021.3056564},
+	number = {1},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/tbdata.2021.3056564},
+	volume = {7},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	issn = {2332-7790, 2372-2096},
+	pages = {13--24},
+	month = mar,
+}
+
+@inproceedings{zhao2017pyramid,
+	author = {Zhao, Hengshuang and Shi, Jianping and Qi, Xiaojuan and Wang, Xiaogang and Jia, Jiaya},
+	title = {Pyramid Scene Parsing Network},
+	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages = {2881--2890},
+	year = {2017},
+	doi = {10.1109/cvpr.2017.660},
+	source = {Crossref},
+	url = {https://doi.org/10.1109/cvpr.2017.660},
+	publisher = {IEEE},
+	month = jul,
+}
